--- a/Test/ajax上传文件验证.html
+++ b/Test/ajax上传文件验证.html
@@ -32,6 +32,7 @@
             success: function (data) {
                 // if (data.status == "true") {
                     alert("上传！");
+                console.log(data);
                 // }
                 // if (data.status == "error") {
                 //     alert(data.msg);
